# DeepMine

./: .gitignore  .gitmodules  CMakeLists.txt  img.qrc  qml.qrc  schema.json  schema.yaml  script.py
qml/: main.qml
src/: Schema.cpp  Schema.h  main.cpp
